--- a/wrappers/android/examples/recording/src/main/res/values/strings.xml
+++ b/wrappers/android/examples/recording/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RS Recording</string>
+    <string name="add_clip">ADD CLIP</string>
+    <string name="add_task">ADD TASK</string>
+    <string name="add_job">ADD JOB</string>
 </resources>
